--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "scheduler": "^0.23.0",
     "styled-components": "^5.3.6",
+    "use-context-selector": "^1.4.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
+    "eslint": "^8.24.0",
     "json-server": "^0.17.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
